Add getCurrenUser handler
